# musig_client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
utils/: include_secp256k1_zkp_lib.h
